--- a/sapl-demo-vaadin/pom.xml
+++ b/sapl-demo-vaadin/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.5</version>
+		<version>3.4.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -21,8 +21,8 @@
 	<properties>
 		<java.version>17</java.version>
 
-		<vaadin.version>24.5.2</vaadin.version>
-		
+		<vaadin.version>24.5.7</vaadin.version>
+
 		<jacoco.version>0.8.11</jacoco.version>
 		<failsafe.version>3.2.5</failsafe.version>
 		<spotbugs.version>4.8.5.0</spotbugs.version>
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.vaadin.artur</groupId>
 			<artifactId>a-vaadin-helper</artifactId>
-			<version>1.6.2</version>
+			<version>1.9.0</version>
 		</dependency>
 
 		<dependency>
@@ -125,7 +125,11 @@
 			<artifactId>exampledata</artifactId>
 			<version>3.4.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.18.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -133,8 +137,8 @@
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcpkix-jdk15on</artifactId>
-			<version>1.70</version>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.78.1</version>
 		</dependency>
 
 		<dependency>
