--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
 
     - name: Cache Sonar Packages
       if: env.IS_FORK == 'false'
-      uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+      uses: actions/cache@v4.2.0
       with:
         path: ~/.sonar/cache
         key: ${{ runner.os }}-sonar
