--- a/sapl-demo-axon/pom.xml
+++ b/sapl-demo-axon/pom.xml
@@ -125,19 +125,49 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<repositories>
+		<!-- Central on top here makes sure it has the highest priority. -->
 		<repository>
-			<!--
-				The central snapshot repository makes the SAPL -SNAPSHOT releases available. 
-			-->
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<name>Central Portal Snapshots</name>
+		    <id>central-portal-snapshots</id>
+		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		    <releases>
+		       <enabled>false</enabled>
+		    </releases>
+		    <snapshots>
+		      <enabled>true</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
+
+	<pluginRepositories>
+		<!-- Central on top here makes sure it has the highest priority. -->
+		<pluginRepository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<name>Central Portal Snapshots</name>
+		    <id>central-portal-snapshots</id>
+		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		    <releases>
+		       <enabled>false</enabled>
+		    </releases>
+		    <snapshots>
+		      <enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<pluginManagement>
