--- a/sapl-demo-vaadin/pom.xml
+++ b/sapl-demo-vaadin/pom.xml
@@ -59,10 +59,14 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
+			<name>Central Portal Snapshots</name>
+		    <id>central-portal-snapshots</id>
+		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		    <releases>
+		       <enabled>false</enabled>
+		    </releases>
+		    <snapshots>
+		      <enabled>true</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
@@ -82,6 +86,17 @@
 			<url>
 				https://maven.vaadin.com/vaadin-prereleases/
 			</url>
+		</pluginRepository>
+		<pluginRepository>
+			<name>Central Portal Snapshots</name>
+		    <id>central-portal-snapshots</id>
+		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		    <releases>
+		       <enabled>false</enabled>
+		    </releases>
+		    <snapshots>
+		      <enabled>true</enabled>
+			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
 
